# user_interface

./: CMakeLists.txt  README.md  package.xml  setup.py  user-interface.rosinstall
msg/: ReconfigurationObject.msg
queries/: bh280_1movable.query  bh280_1movable2.query  bh280_1movable_2.query  bh280_2movables.query  bh280_2movables3.query  bh280_2movables4.query  bh280_3movables.query  bh280_3movables2.query  bh280_4movables.query  bh280_4movables2.query  bh280_5movables.query  bh280_5movables2.query  bh280_6movables.query  bh280_practice1.query  bh280_practice2.query  make_query.py
srv/: GetObjectList.srv  GetTableExtents.srv  InputToState.srv  NextScene.srv  ResetEnvironment.srv
tools/: bh280_temp.yaml  make_path_video.py  make_query.py  make_video.py  play_path.py  subsample_paths.py  subsample_paths.py~
user_interface_web/: cmd.sh  console.py  mainpage.dox  run_back_end.py  site.py  state_updater.py
user_interface_web/static/css/: mystyle.css  scenestyles.css
user_interface_web/static/js/: change_images.js  myfunctions.js  surveyhandler.js
user_interface_web/templates/: consent.html  index.html  instructions.html  survey.html
