<?xml version="1.0"?>
<package>
  <name>user_interface</name>
  <version>0.0.0</version>
  <description>
    The user_interface package
  </description>
  <url type="repository">https://github.com/personalrobotics/user_interface</url>
  <maintainer email="vrangane@andrew.cmu.edu">Vinitha Ranganeni</maintainer>
  <author email="vrangane@andrew.cmu.edu">Vinitha Ranganeni</author>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>openrave_catkin</build_depend>
  <build_depend>python</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>prpy</run_depend>
  <run_depend>herbpy</run_depend>
  <run_depend>python</run_depend>
  <run_depend>python-argparse</run_depend>
  <run_depend>python-numpy</run_depend>
  <run_depend>python-yaml</run_depend>
  <run_depend>or_pushing</run_depend>
</package>
